# Kami

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
kami/: CMakeLists.txt
kami/assets/entity/: cube.json  playerCharacter.json
kami/assets/shader/fragment/: fragment.frag
kami/assets/shader/programs/: programs.json
kami/assets/text/: basic.xml
kami/config/: options.json
kami/docs/: todo.txt
kami/src/: main.cpp
